--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,3 +36,5 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 VignetteBuilder: knitr
+URL: https://github.com/BruceBuurstra/MovieDataCleaner
+BugReports: https://github.com/BruceBuurstra/MovieDataCleaner/issues
